[package]
name = "bmpfntgen"
version = "0.1.0"
authors = ["Jeff Wright <jeff@teamjk.page>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "^0.8.1"
structopt = "^0.3"
image = "0.22.3"
serde = { version = "", features = ["derive"] }
serde_json = ""
