[package]
name = "bmpfntgen"
version = "0.1.0"
authors = ["Jeff Wright <jeff@teamjk.page>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A CLI tool to generate sprite sheets from fonts"
keywords = ["bitmap", "font", "cli", "spritesheet"]
repository = "https://github.com/jeffw387/bmpfntgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "^0.8.1"
structopt = "^0.3"
image = "0.22.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
